<resources>
    <string name="app_name">Lab 2 Activity Lifecycle</string>
    <string name="activityOne">Activity One</string>
    <string name="activityTwo">Activity Two</string>
    <string name="onCreateMessage">onCreate() calls: %1$d</string>
    <string name="onStartMessage">onStart() calls: %1$d</string>
    <string name="onResumeMessage">onResume() calls: %1$d</string>
    <string name="onRestartMessage">onRestart() calls: %1$d</string>
    <string name="action_settings">Settings</string>
</resources>